1998-03-03  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-ganobl.adb: Fix a termination problem. Task Selection was
 	blocked on an entry and no task to unblock it (Task
 	Sigio_Simulation was already dead). Now, these tasks keep going
 	until all the sockets are closed. Change C_Read, C_Write and
	C_Close to trace active sockets.

	* s-ganobl.ads: Add a new procedure C_Close to track sockets in
 	use.

	* s-gartcp.adb: Add several C_Close calls and set
 	TCP_Shutdown_Completed to true when TCP.Shutdown is executed in
 	order to let task Selection from System.Garlic.Non_Blocking know
 	that when the set of sockets in use is empty, this task can safely
 	terminate.

	* s-gartcp.ads: Add a flag TCP_Shutdown_Completed.

1998-02-23  Samuel Tardieu  <sam@inf.enst.fr>

	* constants.sh: Generate a cleaner entry when a constant is not
	available.

	* s-ganobl.adb: Use SVR4 streamio when BSDisms are not available.

	* s-garthi.ads: Add entry for ioctl().

1998-02-21  Samuel Tardieu  <sam@inf.enst.fr>

	* constants.sh: Remove temporary file.

1998-02-19  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.am, Makefile.in: Create System.Garlic.Linker_Options to
 	include various pragma Linker_Options. This file is built using
 	$(EXTRA_LIBS). Update dependencies.

	* s-garhea.adb: With System.Garlic.Linker_Options.

	* s-ganobl.adb: Change Descriptors range from 127 to 63
 	(workaround). GNAT-3.11w crashes on a packed array of boolean with
 	index Descriptors.

1998-02-19  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garthi.ads: Capitalization fixes.

	* s-garrep.adb: Likewise.

	* s-gartcp.adb: Likewise.

	* s-garnam.adb: Likewise.

	* s-rpc.adb: Likewise.

1998-02-19  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gardeb.adb: Use GNAT.OS_Lib.String_Access and remove
 	dependencies from System.Garlic.OS_Lib.

	* s-garopt.ads, s-garopt.adb: Ditto.

	* Makefile.am, Makefile.in: Remove s-gaosli.* from the Makefiles
	and update dependencies.
